@@ -1,3 +1,5 @@
+20070901
+	add andrey's changes to emu/MacOSX/win.c (used by emu/MacOSX/mkfile-a)
 20070817
 	two old changes that weren't in the distribution...
 	libkeyring/rsaalg.c: previously failed to ensure the output key was the right length (really rsagen should do that)
